--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -31,6 +31,11 @@
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/heartbeat/certs/ca/ca.crt
       - ES_NET=${ES_NET}
+      - ES_PORT=${ES_PORT}
+      - KIBANA_PORT=${KIBANA_PORT}
+      - MONITOR_PORT=${MONITOR_PORT}
+      - LOGSTASH_MONITOR_PORT=${LOGSTASH_MONITOR_PORT}
+      - LOGSTASH_PORT=${LOGSTASH_PORT}
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
 
