--- a/.env.dist
+++ b/.env.dist
@@ -22,9 +22,12 @@ MEM_LOGSTASH_LIMIT=800M
 MEM_LIMIT=128M
 
 LOGSTASH_PORT=5044
+LOGSTASH_MONITOR_PORT=9600
+MONITOR_PORT=5066
 KIBANA_PORT=5601
 APM_PORT=8200
 ES_PORT=9200
+
 COMPOSE_HTTP_TIMEOUT=180
 
 ES_NET=192.168.100
