--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -7,6 +7,9 @@
     container_name: "${APP_ID}-es01"
     hostname: "es01.${ELASTIC_NETWORK}"
     networks:
+      # for traefik:
+      default:
+      # local
       elastic:
         ipv4_address: ${ES_NET}.2
     # ports:
@@ -22,7 +25,7 @@
     environment:
       - network.host=${ES_NET}.2
       - node.name=es01
-      - http.port=9200
+      - http.port=${ES_PORT}
       - transport.port=9300
       - discovery.type=single-node
       - xpack.security.http.ssl.key=certs/es01/es01.key
@@ -32,12 +35,20 @@
       - ES_JAVA_OPTS=${ES01_JAVA_OPTS}
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.es01-public.rule=Host(`es.${KIBANA_HOST}`)"
+      - "traefik.http.routers.es01-public.entrypoints=https"
+      - "traefik.http.routers.es01-public.tls=true"
+      - "traefik.http.services.es01-${APP_ID}.loadbalancer.server.port=${ES_PORT}"
+      - "traefik.http.services.es01-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://${ES_NET}.2:9200 | grep -q 'missing authentication credentials'"]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://${ES_NET}.2:${ES_PORT} | grep -q 'missing authentication credentials'"]
       interval: 10s
       timeout: 10s
       retries: 500
