--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -37,6 +37,10 @@
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/metricbeat/certs/ca/ca.crt
       - ES_NET=${ES_NET}
+      - ES_PORT=${ES_PORT}
+      - KIBANA_PORT=${KIBANA_PORT}
+      - MONITOR_PORT=${MONITOR_PORT}
+      - LOGSTASH_MONITOR_PORT=${LOGSTASH_MONITOR_PORT}
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
 
