--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -14,7 +14,7 @@ apm-server:
     enabled: true
     output:
       elasticsearch:
-        hosts: ["https://es01.${APP_NET}:9200"]
+        hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
         protocol: "https"
         username: "${ELASTICSEARCH_USERNAME}"
         password: "${ELASTICSEARCH_PASSWORD}"
@@ -29,7 +29,7 @@ apm-server:
 #---------------------------- APM Server - Agent Configuration ----------------------------
   kibana:
     enabled: true
-    host: "http://kibana.${APP_NET}:5601"
+    host: "http://kibana.${APP_NET}:${KIBANA_PORT}"
     protocol: "http"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -42,7 +42,7 @@ apm-server:
 #-------------------------- Elasticsearch output --------------------------
 output.elasticsearch:
   enabled: true
-  hosts: ["https://es01.${APP_NET}:9200"]
+  hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
   protocol: "https"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
@@ -64,7 +64,7 @@ monitoring:
   cluster_uuid: "${CLUSTER_UUID}"
 
   elasticsearch:
-    hosts: ["https://es01.${APP_NET}:9200"]
+    hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
