--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -28,14 +28,14 @@ filebeat.inputs:
       - /usr/share/filebeat/elogs/traefik/${TRAEFIK_LOG}
 
 output:
-  logstash:                            # # 
-    enabled: true                        # 
-    hosts: ["logstash.${APP_NET}:5044"]  # 
-    index: "logs"                        # 
+  logstash:                                        # # 
+    enabled: true                                    # 
+    hosts: ["logstash.${APP_NET}:${LOGSTASH_PORT}"]  # 
+    index: "logs"                                    # 
                                           
   # for /filebeat -e setup --dashboards:                                          #  
   # elasticsearch:                            
-  #   hosts: ["https://es01.${APP_NET}:9200"] 
+  #   hosts: ["https://es01.${APP_NET}:${ES_PORT}"] 
   #   protocol: "https"                       
   #   username: "${ELASTICSEARCH_USERNAME}"
   #   password: "${ELASTICSEARCH_PASSWORD}"
@@ -52,7 +52,7 @@ se# tup:
     #index.codec: best_compression
     #_source.enabled: false
   elasticsearch:
-    hosts: ["https://es01.${APP_NET}:9200"]
+    hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -62,7 +62,7 @@ se# tup:
       verification_mode: "${VERIFICATION_MODE}"
 
   kibana:
-    host: "http://kibana.${APP_NET}:5601"
+    host: "http://kibana.${APP_NET}:${KIBANA_PORT}"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     protocol: "http"
