--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -155,7 +155,7 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["https://es01.${APP_NET}:9200"]
+    hosts => ["https://es01.${APP_NET}:${ES_PORT}"]
 # data stream is enabled by default
 #     data_stream => true
     ssl => true
