--- a/extras/logstash/syslog-error.conf
+++ b/extras/logstash/syslog-error.conf
@@ -26,7 +26,7 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["https://es01.${APP_NET}:9200"]
+    hosts => ["https://es01.${APP_NET}:${ES_PORT}"]
     data_stream => true
     ssl => true
     ssl_certificate_verification => false    
