--- a/extras/metricbeat/metricbeat/beat-xpack.yml
+++ b/extras/metricbeat/metricbeat/beat-xpack.yml
@@ -5,10 +5,10 @@
   xpack.enabled: true
   period: 10s
   hosts: 
-    # - apm-server.${APP_NET}:5066
-    - heartbeat.${APP_NET}:5066
-    - metricbeat.${APP_NET}:5066
-    - filebeat.${APP_NET}:5066
+    # - apm-server.${APP_NET}:${MONITOR_PORT}
+    - heartbeat.${APP_NET}:${MONITOR_PORT}
+    - metricbeat.${APP_NET}:${MONITOR_PORT}
+    - filebeat.${APP_NET}:${MONITOR_PORT}
   #username: "beats_system"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
