--- a/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
+++ b/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
@@ -4,7 +4,7 @@
 - module: elasticsearch
   xpack.enabled: true
   period: 10s
-  hosts: ["https://es01.${APP_NET}:9200"]
+  hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
   protocol: "https"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
