--- a/extras/metricbeat/metricbeat/logstash-xpack.yml
+++ b/extras/metricbeat/metricbeat/logstash-xpack.yml
@@ -7,4 +7,4 @@
     - node_stats
   xpack.enabled: true
   period: 10s
-  hosts: ["logstash.${APP_NET}:9600"]
+  hosts: ["logstash.${APP_NET}:${LOGSTASH_MONITOR_PORT}"]
