--- a/compose/docker-setup-eliasondrej.yml
+++ b/compose/docker-setup-eliasondrej.yml
@@ -37,6 +37,7 @@
           "      - localhost\n"\
           "      - es01\n"\
           "      - es01.${ELASTIC_NETWORK}\n"\
+          "      - es01.${KIBANA_HOST}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.2\n"\
