--- a/.env.dist
+++ b/.env.dist
@@ -12,7 +12,12 @@ STACK_VERSION=8.5.3
 ELASTIC_USERNAME=elastic
 ELASTIC_PASSWORD=changeme
 LICENSE=basic
+
 KIBANA_HOST=kibana.eliasondrej.com
+# KIBANA_HOST=kibana.${ELASTIC_NETWORK}
+ELASTIC_HOST=es01.eliasondrej.com
+# ELASTIC_HOST=es01.${ELASTIC_NETWORK}
+
 ES01_JAVA_OPTS="-Xms400m -Xmx400m"
 LS_JAVA_OPTS="-Xms512m -Xmx512m"
 KIBANA_NODE_OPTS="--max_old_space_size=512"
