--- a/compose/docker-setup-eliasondrej.yml
+++ b/compose/docker-setup-eliasondrej.yml
@@ -36,11 +36,11 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - es01\n"\
-          "      - es01.${ELASTIC_NETWORK}\n"\
-          "      - es01.${KIBANA_HOST}\n"\
+          "      - ${ELASTIC_HOST}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.2\n"\
+          "      - ${ES_IP}\n"\
           "  - name: logstash\n"\
           "    dns:\n"\
           "      - localhost\n"\
