--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -36,7 +36,7 @@
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.es01-public.rule=Host(`${ELASTIC_HOST}`)"
-      - "traefik.http.routers.es01-public.entrypoints=https-${ES_PORT}"
+      - "traefik.http.routers.es01-public.entrypoints=https"
       - "traefik.http.routers.es01-public.tls=true"
       - "traefik.http.services.es01-${APP_ID}.loadbalancer.server.port=${ES_PORT}"
       - "traefik.http.services.es01-${APP_ID}.loadbalancer.server.scheme=https"
