--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -41,7 +41,7 @@
       - KIBANA_HOST=${KIBANA_HOST}
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.docker.network=${ELASTIC_NETWORK}"
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
       - "traefik.http.routers.kibana-public.entrypoints=https"
       - "traefik.http.routers.kibana-public.tls=true"
