--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -49,8 +49,8 @@ se# tup:
   ilm.overwrite: true
   template.settings:
     index.number_of_shards: 2
-    #index.codec: best_compression
-    #_source.enabled: false
+    index.codec: best_compression
+    _source.enabled: false
   elasticsearch:
     hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
     protocol: "https"
