--- a/extras/metricbeat/metricbeat.yml
+++ b/extras/metricbeat/metricbeat.yml
@@ -62,7 +62,7 @@ setup:
   template.settings:
     index.number_of_shards: 2
     index.codec: best_compression
-    # _source.enabled: false
+    _source.enabled: false
 
   elasticsearch:
     hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
