--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -36,6 +36,11 @@
       - ELASTICSEARCH_USERNAME=${ELASTIC_USERNAME}
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/metricbeat/certs/ca/ca.crt
+      - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
+      - ELASTIC_APM_ENVIRONMENT=${STAGE}
+      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
+      - ELASTIC_APM_SERVICE_NAME=${APP_HOST}-${APP_ID}
+      - ELASTIC_APM_SERVICE_NODE_NAME=metricbeat.${ELASTIC_NETWORK}
       - ES_NET=${ES_NET}
       - ES_PORT=${ES_PORT}
       - KIBANA_PORT=${KIBANA_PORT}
