--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -34,6 +34,10 @@
       - ELASTICSEARCH_USERNAME=${ELASTIC_USERNAME}
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/apm-server/certs/ca/ca.crt
+      - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
+      - ELASTIC_APM_ENVIRONMENT=${STAGE}
+      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
+      - ELASTIC_APM_SERVICE_NAME=${APP_HOST}-${APP_ID}
       - ES_NET=${ES_NET}
       - ES_PORT=${ES_PORT}
       - KIBANA_PORT=${KIBANA_PORT}
