--- a/extras/heartbeat/heartbeat.yml
+++ b/extras/heartbeat/heartbeat.yml
@@ -8,6 +8,25 @@ monitoring:
   enabled: false
   cluster_uuid: "${CLUSTER_UUID}"
 
+processors:
+  - add_docker_metadata: ~
+  # - add_cloud_metadata: ~
+  # - add_kubernetes_metadata: ~
+  # https://www.elastic.co/guide/en/beats/heartbeat/current/add-observer-metadata.html
+  - add_tags:
+      tags: ["${STAGE}"]
+      target: "environment"
+  - add_tags:
+      tags: ["${APP_HOST}-${APP_ID}"]
+      target: "app.id"
+
+instrumentation:
+  enabled: true
+  environment: "${STAGE}"
+  hosts: ["${ELASTIC_APM_SERVER_URL}"]
+  api_key: "${ELASTIC_APM_API_KEY}"
+  tags: ["${APP_HOST}-${APP_ID}"]
+
 heartbeat.config.monitors:
   # Directory + glob pattern to search for configuration files
   path: ${path.config}/monitors.d/*.yml
@@ -63,12 +82,6 @@ heartbeat.jobs:
     limit: 3
   browser:
     limit: 2    
-
-processors:
-  - add_docker_metadata: ~
-  # - add_cloud_metadata: ~
-  # - add_kubernetes_metadata: ~
-  # https://www.elastic.co/guide/en/beats/heartbeat/current/add-observer-metadata.html
 
 output:
   elasticsearch:
