--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -36,6 +36,7 @@
       - APP_ID=${APP_ID}
       - APP_HOST=${APP_HOST}
       - APP_NET=${ELASTIC_NETWORK}
+      - ES_NET=${ES_NET}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=${ELASTIC_USERNAME}
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
