--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -37,7 +37,8 @@ filebeat.inputs:
 output:
   logstash:                                        # # 
     enabled: true                                    # 
-    hosts: ["logstash.${APP_NET}:${LOGSTASH_PORT}"]  # 
+    hosts: ["${ES_NET}.5:${LOGSTASH_PORT}"]          # 
+    #hosts: ["logstash.${APP_NET}:${LOGSTASH_PORT}"] # 
     index: "logs"                                    # 
                                           
   # for /filebeat -e setup --dashboards:                                          #  
