--- a/.env.dist
+++ b/.env.dist
@@ -41,6 +41,8 @@ ES_IP=192.168.1.151
 TRAEFIK_LOG=traefik.log
 
 VERIFICATION_MODE=certificate
+ELASTIC_APM_SERVER_URL=http://apm-server.${ELASTIC_NETWORK}:${APM_PORT}
+ELASTIC_APM_API_KEY=
 ELASTIC_AGENT_TAGS=platel,${STAGE}
 CLUSTER_NAME=es-cluster
 CLUSTER_UUID=
