--- a/extras/metricbeat/metricbeat.yml
+++ b/extras/metricbeat/metricbeat.yml
@@ -29,7 +29,7 @@ instrumentation:
   enabled: true
   environment: "${STAGE}"
   hosts: ["${ELASTIC_APM_SERVER_URL}"]
-  api_key: "${ELASTIC_APM_API_KEY}"
+  # api_key: "${ELASTIC_APM_API_KEY}"
   tags: ["${APP_HOST}-${APP_ID}"]
 
 # hostPid: true
