--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -25,7 +25,7 @@ instrumentation:
   enabled: true
   environment: "${STAGE}"
   hosts: ["${ELASTIC_APM_SERVER_URL}"]
-  api_key: "${ELASTIC_APM_API_KEY}"
+  # api_key: "${ELASTIC_APM_API_KEY}"
   tags: ["${APP_HOST}-${APP_ID}"]
 
 filebeat.inputs:
@@ -37,8 +37,7 @@ filebeat.inputs:
 output:
   logstash:                                        # # 
     enabled: true                                    # 
-    hosts: ["${ES_NET}.5:${LOGSTASH_PORT}"]          # 
-    #hosts: ["logstash.${APP_NET}:${LOGSTASH_PORT}"] # 
+    hosts: ["logstash.${APP_NET}:${LOGSTASH_PORT}"]  # 
     index: "logs"                                    # 
                                           
   # for /filebeat -e setup --dashboards:                                          #  
