--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -6,17 +6,7 @@ input {
 }
 
 filter {
-  if [data_stream][dataset] == "apm.error" {
-    mutate {
-      add_field => {
-        "[event][kind]" => "event"
-        "[event][category]" => "log"
-      }
-    }
-    if [event][dataset] !~ /.+/ {
-      mutate { add_field => { "[event][dataset]" => "apm.error" } }
-    }
-  } else if [service][type] == "traefik" and [fileset][name] == "access" {
+  if [service][type] == "traefik" and [fileset][name] == "access" {
     json { source => "message" }
     date {
       match => ["time", "ISO8601"]
@@ -101,7 +91,8 @@ filter {
       drop {}
     } else {
       ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-      mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
+      mutate { replace => { "message" => "%{time} [%{level}][%{logger}] %{msg}" } }
+#       mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
       mutate { lowercase => ["level"] }
     }
     mutate {
