--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -20,6 +20,7 @@
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /var/log:/hostfs/var/log:ro
       - ./extras/hosts/hosts:/etc/hosts
       - ./certs:/usr/share/filebeat/certs
       - ./extras/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
