--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -20,8 +20,9 @@
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
+      - /proc:/hostfs/proc:ro
       - ./extras/hosts/hosts:/etc/hosts
-      - /:/hostfs:ro
       - ./certs:/usr/share/metricbeat/certs
       - ./extras/metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
       - ./extras/metricbeat/metricbeat:/root/bin
