--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -17,6 +17,8 @@
     networks:
       elastic:
         ipv4_address: ${ES_NET}.8
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
