--- a/extras/metricbeat/metricbeat/system.yml
+++ b/extras/metricbeat/metricbeat/system.yml
@@ -8,7 +8,7 @@
     - load
     - memory
     - network
-    #- process
+    - process
     #- process_summary
     #- socket_summary
     #- entropy
