--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -59,7 +59,8 @@ setup:
   template.settings:
     index.number_of_shards: 2
     index.codec: best_compression
-    _source.enabled: false
+    # _source.enabled: false
+
   elasticsearch:
     hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
     protocol: "https"
