--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -22,9 +22,8 @@
     #   - ${APM_PORT}:8200
     #   - ${MONITOR_PORT}:5066
     volumes:
-      # - /var/run/docker.sock:/var/run/docker.sock
-      - ./extras/hosts/hosts:/etc/hosts
-      - ./certs:/usr/share/apm-server/certs
+      - ./extras/hosts/hosts:/etc/hosts:ro
+      - ./certs:/usr/share/apm-server/certs:ro
       - ./extras/apm-server/apm-server.yml:/usr/share/apm-server/apm-server.yml:ro
       - ./logs/apm:/usr/share/apm-server/logs
       - apm:/usr/share/apm-server
@@ -43,3 +42,4 @@
       - KIBANA_PORT=${KIBANA_PORT}
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
+
