--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -13,10 +13,9 @@
     #   - ${ES_PORT}:9200
     #   - 9300:9300
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./extras/hosts/hosts:/etc/hosts
+      - ./extras/hosts/hosts:/etc/hosts:ro
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      - ./certs:/usr/share/elasticsearch/config/certs
+      - ./certs:/usr/share/elasticsearch/config/certs:ro
       - ./logs/es01:/usr/share/elasticsearch/logs
       - esdata01:/usr/share/elasticsearch
     environment:
