--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -18,10 +18,9 @@
       elastic:
         ipv4_address: ${ES_NET}.7
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./extras/hosts/hosts:/etc/hosts
-      - ./certs:/usr/share/heartbeat/certs
-      - ./extras/heartbeat/heartbeat.yml:/usr/share/heartbeat/heartbeat.yml
+      - ./extras/hosts/hosts:/etc/hosts:ro
+      - ./certs:/usr/share/heartbeat/certs:ro
+      - ./extras/heartbeat/heartbeat.yml:/usr/share/heartbeat/heartbeat.yml:ro
       - heartbeat:/usr/share/heartbeat
     environment:
       - APP_ID=${APP_ID}
