--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -58,7 +58,8 @@ setup:
   ilm.overwrite: true
   template.settings:
     index.number_of_shards: 2
-    index.codec: best_compression
+    index.number_of_replicas: 1
+    index.codec: "best_compression"
     # _source.enabled: false
 
   elasticsearch:
