--- a/extras/metricbeat/metricbeat.yml
+++ b/extras/metricbeat/metricbeat.yml
@@ -70,6 +70,7 @@ setup:
     index.number_of_shards: 2
     index.number_of_replicas: 1
     index.codec: "best_compression"
+    # _source.enabled: false
 
   elasticsearch:
     hosts: ["https://es01.${APP_NET}:${ES_PORT}"]
