--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -25,6 +25,10 @@ filter {
 #        replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
       }
     }
+    geoip {
+      source => "ClientHost"
+      target => "geoip"
+    }
     mutate { remove_field => ["time"] }
   } else if [service][type] == "nginx" {
     if [fileset][name] == "access" {
@@ -36,10 +40,10 @@ filter {
         match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
         target => "@timestamp"
       }
-      geoip {
-        source => "ip"
-        target => "geoip"
-      }
+#       geoip {
+#         source => "ip"
+#         target => "geoip"
+#       }
       if "_grokparsefailure" in [tags] {
         drop {}
       } else {
@@ -134,6 +138,12 @@ filter {
       }
       pattern_definitions => {
         "GREEDYMULTILINE"=> "(.|\n)*"
+      }
+    }
+    if [system][auth][ssh][ip] !~ /.+/ {
+      geoip {
+        source => "[system][auth][ssh][ip]"
+        target => "geoip"
       }
     }
     date {
