--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -140,7 +140,7 @@ filter {
         "GREEDYMULTILINE"=> "(.|\n)*"
       }
     }
-    if [system][auth][ssh][ip] !~ /.+/ {
+    if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
         source => "[system][auth][ssh][ip]"
         target => "geoip"
