--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -25,10 +25,7 @@ filter {
 #        replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
       }
     }
-    geoip {
-      source => "ClientHost"
-      target => "geoip"
-    }
+    geoip { source => "ClientHost" }
     mutate { remove_field => ["time"] }
   } else if [service][type] == "nginx" {
     if [fileset][name] == "access" {
@@ -40,10 +37,7 @@ filter {
         match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
         target => "@timestamp"
       }
-#       geoip {
-#         source => "ip"
-#         target => "geoip"
-#       }
+#       geoip { source => "ip" }
       if "_grokparsefailure" in [tags] {
         drop {}
       } else {
@@ -141,10 +135,7 @@ filter {
       }
     }
     if [system][auth][ssh][ip] =~ /.+/ {
-      geoip {
-        source => "[system][auth][ssh][ip]"
-        target => "geoip"
-      }
+      geoip { source => "[system][auth][ssh][ip]" }
     }
     date {
       match => [ "[system][auth][timestamp]", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
