--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -25,7 +25,10 @@ filter {
 #        replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
       }
     }
-    geoip { source => "ClientHost" }
+    geoip {
+      source => "ClientHost"
+      target => "geoip"
+    }
     mutate { remove_field => ["time"] }
   } else if [service][type] == "nginx" {
     if [fileset][name] == "access" {
@@ -37,7 +40,10 @@ filter {
         match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
         target => "@timestamp"
       }
-#       geoip { source => "ip" }
+#       geoip {
+#         source => "ip"
+#         target => "geoip"
+#       }
       if "_grokparsefailure" in [tags] {
         drop {}
       } else {
@@ -135,7 +141,10 @@ filter {
       }
     }
     if [system][auth][ssh][ip] =~ /.+/ {
-      geoip { source => "[system][auth][ssh][ip]" }
+      geoip {
+        source => "[system][auth][ssh][ip]"
+        target => "geoip"
+      }
     }
     date {
       match => [ "[system][auth][timestamp]", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
