--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -27,7 +27,7 @@ filter {
     }
     geoip {
       source => "ClientHost"
-      target => "geoip"
+      target => "source"
     }
     mutate { remove_field => ["time"] }
   } else if [service][type] == "nginx" {
@@ -143,7 +143,7 @@ filter {
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
         source => "[system][auth][ssh][ip]"
-        target => "geoip"
+        target => "source"
       }
     }
     date {
