--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -143,7 +143,7 @@ filter {
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
         source => "[system][auth][ssh][ip]"
-        target => "source"
+        target => "client"
       }
     }
     date {
