--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -40,10 +40,9 @@ filter {
         match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
         target => "@timestamp"
       }
-#       geoip {
-#         source => "ip"
-#         target => "geoip"
-#       }
+      geoip {
+        source => "ip"
+      }
       if "_grokparsefailure" in [tags] {
         drop {}
       } else {
@@ -142,8 +141,7 @@ filter {
     }
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
-        source => "[system][auth][ssh][ip]"
-        target => "client"
+        source => "system.auth.ssh.ip"
       }
     }
     date {
