--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -142,7 +142,7 @@ filter {
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
         source => "[system][auth][ssh][ip]"
-        target => "client"
+        target => "source"
       }
     }
     date {
