--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -141,8 +141,8 @@ filter {
     }
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
-        source => "[system][auth][ssh][ip]"
-        target => "source"
+        source => "%{[system][auth][ssh][ip]}"
+        target => "client"
       }
     }
     date {
