--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -141,7 +141,7 @@ filter {
     }
     if [system][auth][ssh][ip] =~ /.+/ {
       geoip {
-        source => "%{[system][auth][ssh][ip]}"
+        source => "[system][auth][ssh][ip]"
         target => "client"
       }
     }
