--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -40,9 +40,10 @@ filter {
         match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
         target => "@timestamp"
       }
-      geoip {
-        source => "ip"
-      }
+#       geoip {
+#         source => "ip"
+#         target => "geoip"
+#       }
       if "_grokparsefailure" in [tags] {
         drop {}
       } else {
